Fix flex wrap in first section

--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@ button {
 .section1-boxes {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 100px;
     gap: 60px;
 }
 
